--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "html-webpack-plugin": "^5.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
